syntax = "proto3";


option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.alipay.sofa.rpc.model.grpc";
option java_outer_classname = "GrpcTestServiceProto";


service GrpcTestService {
    rpc reqString (GrpcTestService_Request_String) returns (GrpcTestService_Response_String) {};

    rpc reqStrin_clientStream (stream GrpcTestService_Request_String) returns (GrpcTestService_Response_String){};

    rpc reqString_serverStream (GrpcTestService_Request_String) returns(stream GrpcTestService_Response_String){};

    rpc reqString_bothStream (stream GrpcTestService_Request_String) returns(stream GrpcTestService_Response_String){};
}

message GrpcTestService_Request_String {
    string name = 1;
}

message GrpcTestService_Response_String {
    string result = 1;
}

